# llm-ontology-experiment

./: .gitignore  README.md  main.tex  pyproject.toml  report_doterajsia_praca_datasety.txt  requirements.txt
artifacts/: info.md
configs/: base.yaml  info.md
data/: info.md
docs/: architecture.md  download_links.md  experiment_design.md  experiment_environment_and_splits.md  finetuning_design.md  git_commit_policy.md  info.md  rag_phase1.md  rag_phase2.md  reproducible_handoff.md  testbench_runbook.md  v2_evaluation_runbook.md  v2_finetuning_runbook.md  wsl_finetuning_setup.md
evaluation/: info.md
experiments/: info.md
notebooks/: info.md
results/: 29.5.md  current_approaches_ml_report.tex  info.md
scripts/: build_eval_report.py  check_finetuning_ready.py  check_finetuning_setup.py  check_model_setup.py  check_transformers_compat.py  check_v2_adapters.py  compute_eval_metrics.py  evaluate.py  generate.py  info.md  inspect_marv.py  inspect_methods2test.py  inspect_ml4refactoring.py  package_v2_adapters.py  prepare_data.py  prepare_final_datasets.py  prepare_marv.py  prepare_methods2test.py  prepare_ml4refactoring.py  run_full_evaluation.py  run_inference_eval.py  run_ollama_baseline.py  smoke_eval_metrics.py  train.py  train_finetuning.py
src/: info.md
tests/: info.md  test_architecture.py  test_benchmark_edge_cases.py  test_benchmarks.py  test_config.py  test_data.py  test_generation.py  test_imports.py  test_legacy_entrypoints.py  test_metrics.py  test_model_configs.py  test_ollama_client.py  test_rag_models_and_ingestion.py  test_rag_retrieval.py  test_rag_stage2_ingestion.py  test_rag_stage3_runner.py  test_reproducibility_and_group_splits.py  test_testbench_execution.py  (+2 more)
(+233 files in other folders)
