[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ontology-experiment"
version = "0.1.0"
description = "Fine-tuning experiment pipeline for LLMs in software engineering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
training = [
  "transformers>=4.40",
  "datasets>=2.18",
  "peft>=0.10",
  "accelerate>=0.28",
  "torch>=2.2",
  "bitsandbytes>=0.43; platform_system != 'Windows'",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
